objects/RMA_Vendor_Code__c.object
<CustomObject>
    <description>300 mm vendor code for all the Lots that belongs to Fab 7.</description>
    <fields>
        <fullName>Fab_Group__c</fullName>
        <label>Fab Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fab 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lot_Id__c</fullName>
        <label>Lot Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <externalId>true</externalId>
        <label>Unique Field</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Wafer_Id_DW__c</fullName>
        <description>This is the field coming from the Datawarehouse</description>
        <label>Wafer Id (DW)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_Id__c</fullName>
        <formula>TEXT(VALUE(MID(Wafer_Id_DW__c, LEN(Wafer_Id_DW__c)-1, LEN(Wafer_Id_DW__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wafer Id</label>
        <type>Text</type>
    </fields>
    <label>RMA Vendor Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fab_Group__c</columns>
        <columns>Lot_Id__c</columns>
        <columns>Wafer_Id_DW__c</columns>
        <columns>Unique_Field__c</columns>
        <columns>Wafer_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Vendor Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMA Vendor Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>